--- a/style.css
+++ b/style.css
@@ -202,13 +202,12 @@ body {
 }
 
 .wrapwrap {
-    background: rgba( 255, 255, 255, 0.1 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 1px );
-    -webkit-backdrop-filter: blur( 1px );
+    
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.343);
-    padding-block: 1rem;
+    padding-block: 1.5rem;
 }
 
 .title {
@@ -246,8 +245,7 @@ height: 1px;
     font-family: Raleway;
     font-size: .8rem;
     color: #3700ff; 
-    text-align: end;
-    
+    text-align: center;
 }
 
 .flx2 {
@@ -335,7 +333,6 @@ height: 1px;
 
 
 .button {
-    margin-top: 2rem;
     background-color: #ff2088;
     border-radius: 100%;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
@@ -476,19 +473,19 @@ height: 1px;
     
     .bg {
         background-color: #3700ff;
-        padding: 4rem 6rem;
+        padding: 2.5rem 3.5rem;
         border-radius: 100%;
      
     }
     
     .title {
-        font-size: clamp(2.5rem, 20vw, 7rem); 
+        font-size: clamp(2.5rem, 20vw, 4rem); 
         text-align: center;
         color: #FF50A9;
         font-variant: small-caps;
         line-height: 1.3;
         filter: drop-shadow(3px 3px #8b0101);
-        padding-top: 1rem;
+        padding-top: .5rem;
         font-family: TanParadiso;
     }
     
@@ -510,7 +507,8 @@ height: 1px;
         color: #3700ff; 
         width: 50%; 
         text-align: center;
-        margin-top: 1.2rem;
+        padding-top: 2rem;
+        margin: auto;
     }
     
     .a {
@@ -563,7 +561,7 @@ height: 1px;
     align-items: center;
     justify-content: space-between;
     gap: .2rem;
-    width: 50%;
+    width: 90%;
 }
 
 .spacer {
@@ -575,7 +573,7 @@ height: 2px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: 50%;
+    width: 90%;
 } 
 
 .button {
@@ -611,6 +609,10 @@ height: 2px;
     left: 1rem;
 }
     
+
+.wrapwrap {
+    max-width: 60%;
+}
 
     
     
