--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ height: 1px;
     font-family: Raleway;
     font-size: .8rem;
     color: #3700ff; 
-    text-align: center;
+    text-align: right;
 }
 
 .flx2 {
